--- a/templates/admin/modal-new-dish-name.html
+++ b/templates/admin/modal-new-dish-name.html
@@ -23,31 +23,31 @@
 				<div class="row small m-2">
 					<h6>Dias da Semana</h6>
 					<div class="form-check col">
-						<input class="form-check-input" type="checkbox" id="monday-switch" checked>
+						<input class="form-check-input weekday-group" type="checkbox" checked>
 						<label class="form-check-label" for="monday-switch">Segunda</label>
 					</div>
 					<div class="form-check col">
-						<input class="form-check-input" type="checkbox" id="tuesday-switch" checked>
+						<input class="form-check-input weekday-group" type="checkbox" checked>
 						<label class="form-check-label" for="tuesday-switch">Terça</label>
 					</div>
 					<div class="form-check col">
-						<input class="form-check-input" type="checkbox" id="wednesday-switch" checked>
+						<input class="form-check-input weekday-group" type="checkbox" checked>
 						<label class="form-check-label" for="wednesday-switch">Quarta</label>
 					</div>
 					<div class="form-check col">
-						<input class="form-check-input" type="checkbox" id="thursday-switch" checked>
+						<input class="form-check-input weekday-group" type="checkbox" checked>
 						<label class="form-check-label" for="thursday-switch">Quinta</label>
 					</div>
 					<div class="form-check col">
-						<input class="form-check-input" type="checkbox" id="friday-switch" checked>
+						<input class="form-check-input weekday-group" type="checkbox" checked>
 						<label class="form-check-label" for="friday-switch">Sexta</label>
 					</div>
 					<div class="form-check col">
-						<input class="form-check-input" type="checkbox" id="saturday-switch" checked>
+						<input class="form-check-input weekday-group" type="checkbox" checked>
 						<label class="form-check-label" for="saturday-switch">Sábado</label>
 					</div>
 					<div class="form-check col">
-						<input class="form-check-input" type="checkbox" id="sunday-switch" checked>
+						<input class="form-check-input weekday-group" type="checkbox" checked>
 						<label class="form-check-label" for="sunday-switch">Domingo</label>
 					</div>
 				</div>
