--- a/templates/admin/modal-new-dish-pick-images.html
+++ b/templates/admin/modal-new-dish-pick-images.html
@@ -9,7 +9,7 @@
 					<div class="row">
 						{{ range .Images }}
 							<div class="col-4 col-sm-3 col-lg-2 col-xl-1 border border-success p-2 border-opacity-10">
-								<input class="form-check-input" type="checkbox" value="{{ .ID }}" data-original-name="{{ .Original }}">
+								<input class="form-check-input image-group" type="checkbox" data-image-id="{{ .ID }}" data-path="{{ .Path }}" data-original-name="{{ .Original }}">
 								<img src="{{ .Path }}" class="img-thumbnail" alt="...">
 							</div>
 						{{ end }}
