--- a/templates/admin/modal-new-category.html
+++ b/templates/admin/modal-new-category.html
@@ -28,7 +28,7 @@
 			</div>
 
 			<div class="modal-footer">
-				<button type="button" class="btn btn-outline-success" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#modal-new-dish-images">Anterior</button>
+				<button type="button" class="btn btn-outline-success" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#modal-pick-dish-images">Anterior</button>
 				<button type="button" class="btn btn-outline-success" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#modal-new-dish-name">Próximo</button>
 			</div>
 		</div>
