--- a/templates/admin/modal-new-dish-report.html
+++ b/templates/admin/modal-new-dish-report.html
@@ -12,28 +12,27 @@
 			<div class="modal-body">
 
 				<div class="mb-3 form-floating">
-					<input type="text" class="form-control" id="report-dish-name">
+					<input type="text" class="form-control" id="report-dish-name" readonly>
 					<label for="report-dish-name" class="form-label">Nome do prato</label>
 				</div>
 
 				<div class="mb-3 form-floating">
-					<textarea class="form-control" id="report-dish-description" rows="4"></textarea>
+					<textarea class="form-control" id="report-dish-description" rows="4" readonly></textarea>
 					<label for="report-dish-description" class="form-label">Descrição</label>
 				</div>
 
 				<div class="mb-3 form-floating">
-					<input type="number" class="form-control" id="report-dish-price">
+					<input type="number" class="form-control" id="report-dish-price" readonly>
 					<label for="report-dish-price" class="form-label">Preço</label>
 				</div>
 
 				<div class="mb-3 form-floating">
-					<input type="text" class="form-control" id="report-dish-category">
+					<input type="text" class="form-control" id="report-dish-category" readonly>
 					<label for="report-dish-category" class="form-label">Categoria</label>
 				</div>
 
-				<div class="mb-3 form-floating">
-					<input type="text" class="form-control" id="report-dish-weekdays">
-					<label for="report-dish-weekdays" class="form-label">Dias da semana</label>
+				<div class="mb-3">
+					<textarea type="text" class="form-control small" id="report-dish-weekdays" rows="2" readonly></textarea>
 				</div>
 
 				<div class="mb-3">
