--- a/templates/admin/modal-new-dish-name.html
+++ b/templates/admin/modal-new-dish-name.html
@@ -9,15 +9,15 @@
 			</div>
 			<div class="modal-body">
 				<div class="mb-3 form-floating">
-					<input type="text" class="form-control" id="dish-name" placeholder="Nome do prato" required>
+					<input type="text" class="form-control" id="dish-name" placeholder="Nome do prato" value="Batata frita com bacon" required>
 					<label for="dish-name" class="form-label">Nome</label>
 				</div>
 				<div class="mb-3 form-floating">
-					<textarea class="form-control" id="dish-description" placeholder="Descreva o prato em detalhes" rows="4"></textarea>
+					<textarea class="form-control" id="dish-description" placeholder="Descreva o prato em detalhes" rows="4">Batata frita, bacon, sal, alho</textarea>
 					<label for="dish-description" class="form-label">Descrição</label>
 				</div>					
 				<div class="mb-3 form-floating">
-					<input type="number" class="form-control" id="dish-price" name="Price" required>
+					<input type="text" class="form-control" id="dish-price" name="Price" value="12,00" required>
 					<label for="dish-price" class="form-label">Preço</label>
 				</div>
 				<div class="row small m-2">
@@ -27,7 +27,7 @@
 						<label class="form-check-label" for="monday-switch">Segunda</label>
 					</div>
 					<div class="form-check col">
-						<input class="form-check-input weekday-group" type="checkbox" checked>
+						<input class="form-check-input weekday-group" type="checkbox">
 						<label class="form-check-label" for="tuesday-switch">Terça</label>
 					</div>
 					<div class="form-check col">
@@ -39,7 +39,7 @@
 						<label class="form-check-label" for="thursday-switch">Quinta</label>
 					</div>
 					<div class="form-check col">
-						<input class="form-check-input weekday-group" type="checkbox" checked>
+						<input class="form-check-input weekday-group" type="checkbox">
 						<label class="form-check-label" for="friday-switch">Sexta</label>
 					</div>
 					<div class="form-check col">
