--- a/templates/admin/modal-new-dish-report.html
+++ b/templates/admin/modal-new-dish-report.html
@@ -8,34 +8,27 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 
-		
 			<div class="modal-body">
-
-				<div class="mb-3 form-floating">
+				<div class="mb-1 form-floating">
 					<input type="text" class="form-control" id="report-dish-name" readonly>
 					<label for="report-dish-name" class="form-label">Nome do prato</label>
 				</div>
-
-				<div class="mb-3 form-floating">
+				<div class="mb-1 form-floating">
 					<textarea class="form-control" id="report-dish-description" rows="4" readonly></textarea>
 					<label for="report-dish-description" class="form-label">Descrição</label>
 				</div>
-
-				<div class="mb-3 form-floating">
-					<input type="number" class="form-control" id="report-dish-price" readonly>
+				<div class="mb-1 form-floating">
+					<input type="text" class="form-control" id="report-dish-price" readonly>
 					<label for="report-dish-price" class="form-label">Preço</label>
 				</div>
-
-				<div class="mb-3 form-floating">
+				<div class="mb-1 form-floating">
 					<input type="text" class="form-control" id="report-dish-category" readonly>
 					<label for="report-dish-category" class="form-label">Categoria</label>
 				</div>
-
-				<div class="mb-3">
+				<div class="mb-1">
 					<textarea type="text" class="form-control small" id="report-dish-weekdays" rows="2" readonly></textarea>
 				</div>
-
-				<div class="mb-3">
+				<div class="mb-1">
 					<div id="picked-images" class="row">
 					</div>
 				</div>
