--- a/templates/admin/dish.html
+++ b/templates/admin/dish.html
@@ -37,9 +37,68 @@
 
 <script>
   	$(document).ready(function() {
-		populateCategories();
-		$('#modal-pick-dish-images').modal('show');
+
+		$('#modal-new-category').modal('show');
   	});
+
+	// Event when btn-save-dish is clicked
+	$('#btn-save-dish').click(function() {
+		console.log('btn-save-dish clicked');
+		const dishName = $('#dish-name').val();
+		const dishDescription = $('#dish-description').val();
+		const dishPrice = $('#dish-price').val();
+		const dishCategory = $('#category-list input:checked').val();
+		console.log('Dish Name:', dishName);
+		console.log('Dish Description:', dishDescription);
+		console.log('Dish Price:', dishPrice);
+		console.log('Dish Category:', dishCategory);
+
+		const weekdays = [];
+		$('.weekday-group').each(function() {
+			if ($(this).is(':checked')) {
+				weekdays.push($(this).val());
+			}
+		});
+		console.log('Weekdays:', weekdays);
+
+		const paths = [];
+		const images = [];
+		const image_ids = [];
+		$('.image-group').each(function() {
+			if ($(this).is(':checked')) {
+				images.push($(this).data('original-name'));
+				paths.push($(this).data('path'));
+				image_ids.push($(this).data('image-id'));
+			}
+		});
+		console.log('Images:', images);
+		console.log('Paths:', paths);
+		console.log('Image IDs:', image_ids);
+
+		const CompanyId = $('#current-company-id').val();
+		const UserId = $('#current-user-id').val();
+
+		return;
+
+		fetch('/api/create/dish', {
+			method: 'POST',
+			headers: {
+				'Content-Type': 'application/json'
+			},
+			body: JSON.stringify({ Name:dishName, Description:dishDescription, Price:dishPrice, Category:dishCategory, Weekdays:weekdays, ImageIds:image_ids, CompanyId:parseInt(CompanyId), UserId:parseInt(UserId) })
+		})
+		.then(response => response.json())
+		.then(data => {
+			if (data.error) {
+				console.log('Error:', data);
+				showAlert(data.error, 3000);
+			} 
+			else {
+				console.log('Success:', data);
+				showAlert(data.message, 3000);
+			}
+		})
+	});
 
 	// Event when modal report is shown
 	$('#modal-new-dish-report').on('show.bs.modal', function (event) {
@@ -48,6 +107,10 @@
 		const dishDescription = $('#dish-description').val();
 		const dishPrice = $('#dish-price').val();
 		const dishCategory = $('#category-list input:checked').next().text();
+		console.log('Dish Name:', dishName);
+		console.log('Dish Description:', dishDescription);
+		console.log('Dish Price:', dishPrice);
+		console.log('Dish Category:', dishCategory);
 
 		const weekdays = [];
 		$('.weekday-group').each(function() {
@@ -96,6 +159,7 @@
 	});
 
 	// Populate categories
+	/*
 	function populateCategories() {
 
 		const CompanyId = $('#current-company-id').val();
@@ -117,14 +181,19 @@
 				categoryList.empty();
 				data.categories.forEach(category => {
 					categoryList.append(`<div class="form-check col">
-						<input class="form-check-input" type="radio" name="categoryRadio"/>
+						<input class="form-check-input" type="radio" name="categoryRadio" val="category.Id"/>
 						<label class="form-check">${category.Name}</label>`);
 					categoryList.append(`</div>`);
 				});
+
+				if (data.categories.length > 0) {
+					categoryList.find('input[type="radio"]').first().prop('checked', true);
+				}
 			}
 		})
 	}
-
+	*/
+	
 	// Evento quando pressionado ENTER em category name
 	$('#category-name').keydown(function(e) {
 		console.log('category-name keypress');
