Listando dias da semana como banco de dados

--- a/templates/admin/dish.html
+++ b/templates/admin/dish.html
@@ -42,7 +42,8 @@
 		$('#category-list input[type="radio"]').first().prop('checked', true);
 		// Set the first two images as selected
 		$('.image-group').slice(0, 2).prop('checked', true);
-		$('#modal-new-dish-report').modal('show');
+		//$('#modal-new-dish-report').modal('show');
+		$('#modal-new-dish-name').modal('show');
   	});
 
 	// Event when btn-save-dish is clicked
