--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
 										</button>
 									</div>
 									<div class="col-9">
-										<input type="password" class="form-control" id="password" name="password" value="123456789">
+										<input type="password" class="form-control" id="password" name="password" value="Dffr#4dff">
 									</div>
 								</div>
 							</div>
