--- a/templates/admin/dish.html
+++ b/templates/admin/dish.html
@@ -15,7 +15,13 @@
 
 	<hr>
 	<div class="md-3">
-		<p>Você tem <span></span> pratos cadastrados até o momento.</p>
+		<p>Você tem <span>{{ .Count }}</span> pratos cadastrados até o momento.</p>
+		{{ if .Count }}
+		<a>Para ver uma amostra do seu Menu, clique aqui</a>
+		{{ end }}
+	</div>
+
+	<div class="md-3">
 		<button type="button" class="btn btn-link"  data-bs-toggle="modal" data-bs-target="#modal-new-dish-images">
 			Para incluir um novo, clique aqui e vamos começar!
 		</button>
@@ -39,11 +45,11 @@
   	$(document).ready(function() {
 
 		// Set the first category as selected
-		$('#category-list input[type="radio"]').first().prop('checked', true);
+		//$('#category-list input[type="radio"]').first().prop('checked', true);
 		// Set the first two images as selected
-		$('.image-group').slice(0, 2).prop('checked', true);
+		//$('.image-group').slice(0, 2).prop('checked', true);
 		//$('#modal-new-dish-report').modal('show');
-		$('#modal-new-dish-name').modal('show');
+		//$('#modal-new-dish-name').modal('show');
   	});
 
 	// Event when btn-save-dish is clicked
